<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Aircraft Refueling</string>
    <string name="menu_fueling">Расчет заправки</string>
    <string name="b736_739" translatable="false">B736-B739</string>
    <string name="openNavDrawer" translatable="false">Open navigation drawer</string>
    <string name="closeNavDrawer" translatable="false">Close navigation drawer</string>
    <string name="menu_deicing">Расчет ПОО</string>
    <string name="action_savetofile">Сохранить в файл</string>
    <string name="action_deletefile">Удалить файл</string>
    <string name="str_litrefragment">Известны литры</string>
    <string name="str_kilofragment">Известны килограммы</string>
    <string name="has_on_board">На борту,%s</string>
    <string name="total_mass_kilo">Всего,%s</string>
    <string name="total_volume_litre">Всего,%s</string>
    <string name="required_kilo">Требуется,%s</string>
    <string name="remain_to_fill">Осталось залить</string>
    <string name="left_fuel_tank">Левый бак</string>
    <string name="right_fuel_tank">Правый бак</string>
    <string name="center_fuel_tank">Центральный бак</string>
    <string name="calculate">Расчет</string>
    <string name="vol_empty">0</string>
    <string name="recom_refuel">Рекомендуемая заправка:</string>
    <string name="fueling">Заправка</string>
    <string name="deicing">ПОО</string>
    <!--Errors-->
    <string name="error_wrong_data">Неверные данные</string>
    <string name="error_deicing_volume_with_unit">Ошибка значения объема в %s</string>
    <string name="error_val_on_board_with_unit">Ошибка значения на борту в %s</string>
    <string name="error_val_on_board">Ошибка значения на борту</string>
    <string name="error_val_proc_pvk">Ошибка значения процента ПВК</string>
    <string name="error_val_req">Ошибка значения требуемого в %s</string>
    <string name="error_val_density">Ошибка значения плотности в кг/л</string>
    <string name="error_calulate_requied">Необходим расчет</string>
    <!--Unit info-->
    <string name="density">Плотность</string>
    <string name="unit_density_kg_litre">Плотность,кг/л</string>
    <!--Units-->
    <array name="volumeUnits">
        <item>@string/unit_litre</item>
        <item>@string/unit_am_gallons</item>
    </array>
    <array name="aircraftTypes">
        <item>B737</item>
        <item>B767</item>
    </array>
    <string name="unit_litre">литры</string>
    <string name="unit_am_gallons">ам.галлоны</string>
    <string name="unit_am_gallons_named">ам.галлонах</string>
    <string name="unit_density">кг/л</string>
    <string name="unit_mass_kg">кг</string>
    <string name="unit_mass_lb">фунты</string>
    <string name="unit_mass_lb_named">фунтах</string>
    <string name="unit_volume">л</string>
    <string name="unit_volume_named">литрах</string>
    <string name="unit_percent">%</string>
    <string name="record_data_title">Данные рейса: %s;</string>
    <string name="file_fuel_remain">Остаток</string>
    <string name="file_fueled">Заправка</string>
    <string name="litre_qty">Объем</string>
    <string name="error_sd_card_not_avalable">SD-карта не доступна</string>
    <string name="file_deleted">Файл удален</string>
    <string name="error_no_type_data">Нет данных о типе</string>
    <string name="error_file_not_deleted">Файл не удален</string>
    <string name="error_file_not_write">Файл не записан</string>
    <string name="error_file_not_found">Файл не найден</string>
    <string name="success_file_write">Файл успешно записан %s</string>
    <string name="error_val_density_pvk">Введите корректное значение плотности ПВК</string>
    <string name="file_percent_pvk">Процент ПВК</string>
    <string name="file_density_pvk">Плотность ПВК</string>
    <string name="file_total_mass">Общий вес</string>
    <string name="file_save_data">Записать данные в файл</string>
    <string name="file_del">Удалить файл с данными</string>
    <string name="full_percent">100</string>
    <string name="press_back_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="storage_permission_denied">Запись на SD запрещена</string>
    <string name="response_text">Вы подтверждаете,что разработчик приложения не несёт ответственность за появление
        неточной или ложной информации, а также за использование вами данных расчета и обработки информации.
    </string>
    <string name="confirm">Подтверждаю</string>
    <string name="responsibility_title">Отказ от ответственности</string>
    <string name="need_confirm_resp">Неоходимо принять отказ от ответственности</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_settings">Настройки</string>
    <string name="weight">Вес:</string>
    <string name="volume">Объем</string>
    <string name="load_units_error">Ошибка загрузки измерений</string>
    <string name="record_data">Данные рейса</string>
    <string name="dimens_settings">Настройка измерений</string>
    <string name="other_settings">Остальные настройки</string>
    <string name="save_last_refuel_data">Сохранять последние рассчитанные данные заправки</string>
    <string name="aircraft_type">Тип ВС</string>
    <string name="share_data">Поделиться файлом</string>
    <string name="share_file_by">Отправить файл через</string>
</resources>
