<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTotalVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toStartOf="@+id/tilDensity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTotalOnboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_volume_litre"
            android:inputType="numberSigned" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDensity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilTotalVolume"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDensityPVK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_density_pvk"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkPVK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_percent_pvk"
        app:layout_constraintBottom_toBottomOf="@+id/tilPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilPercent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkPVK"
        app:layout_constraintTop_toBottomOf="@+id/tilDensity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPercentPVK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/file_percent_pvk"
            android:inputType="numberSigned"
            android:text="@string/full_percent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTotalMass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPercent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTotalMassFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/total_mass_kilo"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLitreCnt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTotalMass" />

    <Button
        android:id="@+id/btnKiloSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_save_data"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLitreCnt" />

    <Button
        android:id="@+id/btnKiloDel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_del"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKiloSave" />


</androidx.constraintlayout.widget.ConstraintLayout>